<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStudentActivity">
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:autofillHints="name"
            android:hint="@string/Fullname"
            android:inputType="text"
            android:textSize="20sp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/edt_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:autofillHints="postalCode"
            android:hint="@string/StudentId"
            android:inputType="text"
            android:textSize="20sp"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btn_add_std"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_student" />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>